# uavs3e

./: CMakeLists.txt  README.md  utest.c  utest.h  utest_gop.c  version.sh
armv8/: arm64.h  cost_arm64.S  pixel_arm64.S  sao_kernel_arm64.S
inc/: com_util.h  uavs3e.h
ios_rt/ios_rt/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m  uavs3e.h
ios_rt/ios_rt.xcodeproj/: project.pbxproj
ios_rt/ios_rt.xcodeproj/project.xcworkspace/xcuserdata/dujiang.xcuserdatad/: UserInterfaceState.xcuserstate
ios_rt/ios_rt.xcodeproj/project.xcworkspace/xcuserdata/dujiang.xcuserdatad/xcdebugger/: Expressions.xcexplist
ios_rt/ios_rt.xcodeproj/xcshareddata/xcschemes/: ios_rt.xcscheme
ios_rt/ios_rt.xcodeproj/xcuserdata/dujiang.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios_rt/ios_rt.xcodeproj/xcuserdata/dujiang.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  uavs3e.c
src/armv8/: arm64.c  arm64.h  cost_arm64.S  def_arm64.S  inter_pred_arm64.S  intra_pred_arm64.S  pixel_arm64.S  sao_kernel_arm64.S  trans_arm64.c  trans_dct_arm64.S
test/: utest.c
uAVS3lib/: CMakeLists.txt  biariencode.h  block_info.c  common.h  header.c  header.h  image.c  rdopt.c  slice.c  uAVS3lib.c  uAVS3lib.h  uAVS3lib_gop.c  uAVS3lib_gop.h
uAVS3lib/armv8/: arm64.c  arm64.h  block_arm64.S  cost_arm64.S  deblock_arm64.S  def_arm64.S  inter_pred_arm64.S  intra_pred_arm64.S  pixel_arm64.S  sao_arm64.c  sao_kernel_arm64.S  sao_kernel_arm64.h  trans_dct_arm64.S  transform_arm64.c
uAVS3lib/tools/: threadpool.c
uAVS3lib/x86/: intrinsic.c
